--- a/index.html
+++ b/index.html
@@ -6,12 +6,36 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My name is Gaurav</h1>
-    <hr>
-    <br>
-   <a href="https://google.com"><h1>second web page</h1>
-    <a href="https://github.com"><h1>vist github</h1>
-   </a> <p>i am curently studying in KRMU</p>
-    <img src="https://thumbs.dreamstime.com/b/golden-sky-reflects-sandy-beach-rugged-mountains-distance-water-channels-create-patterns-across-sand-leading-eye-373111636.jpg?w=768">
+   <table border="2" cellpadding="20px" cellspacing="20px">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Math</th>
+            <th>Science</th>
+            <th>English</th>        
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Aman</td>
+            <td>70</td>
+            <td>60</td>
+            <td rowspan="2">40</td>
+        </tr>
+        <tr>
+            <td>Ajit</td>
+            <td>80</td>
+            <td>70</td>
+            <!-- <td>40</td> -->
+        </tr>
+        <td>avinash</td>
+            <td>70</td>
+            <td colspan="2">70</td>
+            <!-- <td>40</td> -->
+        <tr>
+
+        </tr>
+    </tbody>
+   </table> 
 </body>
 </html>
