--- a/index.html
+++ b/index.html
@@ -1,41 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-   <table border="2" cellpadding="20px" cellspacing="20px">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Math</th>
-            <th>Science</th>
-            <th>English</th>        
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Aman</td>
-            <td>70</td>
-            <td>60</td>
-            <td rowspan="2">40</td>
-        </tr>
-        <tr>
-            <td>Ajit</td>
-            <td>80</td>
-            <td>70</td>
-            <!-- <td>40</td> -->
-        </tr>
-        <td>avinash</td>
-            <td>70</td>
-            <td colspan="2">70</td>
-            <!-- <td>40</td> -->
-        <tr>
-
-        </tr>
-    </tbody>
-   </table> 
-</body>
-</html>
+x=10
+y=10
+z=x
+print()
