--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-x=10
-y=10
-z=x
-print()
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>My name is Gaurav</h1>
+    <hr>
+    <br>
+   <a href="https://google.com"><h1>second web page</h1>
+    <a href="https://github.com"><h1>vist github</h1>
+   </a> <p>i am curently studying in KRMU</p>
+    <img src="https://thumbs.dreamstime.com/b/golden-sky-reflects-sandy-beach-rugged-mountains-distance-water-channels-create-patterns-across-sand-leading-eye-373111636.jpg?w=768">
+</body>
+</html>
